--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "abdullahkus/featherbank-configserver:s7"
+    image: "abdullahkus/featherbank-configserver:s8"
     container_name: configserver
     ports:
       - "8071:8071"
@@ -65,9 +65,33 @@ services:
     extends:
       file: common-config.yml
       service: microservice-base-config
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://eurekaserver:8070/eureka"
+
+  eurekaserver:
+    image: "abdullahkus/featherbank-eurekaserver:s8"
+    container_name: eurekaserver
+    ports:
+      - "8070:8070"
+    depends_on:
+      rabbit:
+        condition: service_healthy
+      configserver:
+        condition: service_healthy
+    healthcheck:
+      test: "wget -qO- localhost:8070/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
+    environment:
+      SPRING_APPLICATION_NAME: "eurekaserver"
 
   accounts:
-    image: "abdullahkus/featherbank-accounts:s7"
+    image: "abdullahkus/featherbank-accounts:s8"
     container_name: accounts
     ports:
       - "8080:8080"
@@ -84,7 +108,7 @@ services:
       service: microservice-configserver-config
 
   loans:
-    image: "abdullahkus/featherbank-loans:s7"
+    image: "abdullahkus/featherbank-loans:s8"
     container_name: loans
     ports:
       - "8090:8090"
@@ -101,7 +125,7 @@ services:
       service: microservice-configserver-config
 
   cards:
-    image: "abdullahkus/featherbank-cards:s7"
+    image: "abdullahkus/featherbank-cards:s8"
     container_name: card
     ports:
       - "9000:9000"
