--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     username: root
     password: root
   jpa:
+    hibernate:
+      ddl-auto: update
     show-sql: true
     sql:
       init:
@@ -27,3 +29,28 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
+  info:
+    env:
+      enabled: true
+
+endpoints:
+  shutdown:
+    enabled: true
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
+
+info:
+  app:
+    name: "accounts"
+    description: "Accounts Service"
+    version: "1.0.0"
