--- a/cards/Dockerfile
+++ b/cards/Dockerfile
@@ -4,6 +4,8 @@ FROM openjdk:17-jdk-slim
 #Information around who maintains the image
 MAINTAINER featherbank.com
 
+RUN apt-get update && apt-get install -y apt-transport-https wget iputils-ping curl
+
 # Add the application's jar to the image
 COPY target/cards-0.0.1-SNAPSHOT.jar cards-0.0.1-SNAPSHOT.jar
 
