--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -32,9 +32,20 @@ management:
   endpoint:
     shutdown:
       enabled: true
+    health:
+      probes:
+        enabled: true
+  health:
+    readiness:
+      enabled: true
+    liveliness:
+      enabled: true
   info:
     env:
       enabled: true
+  tracing:
+    sampling:
+      probability: 1.0
 
 endpoints:
   shutdown:
