--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -46,6 +46,9 @@ management:
   tracing:
     sampling:
       probability: 1.0
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 endpoints:
   shutdown:
