--- a/configserver/src/main/resources/application.yaml
+++ b/configserver/src/main/resources/application.yaml
@@ -32,6 +32,9 @@ management:
     health:
       probes:
         enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 server:
   port: 8071
