--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -1,4 +1,19 @@
 services:
+  keycloak:
+    image: quay.io/keycloak/keycloak
+    container_name: keycloak
+    ports:
+      - 7080:8080
+    environment:
+      KEYCLOAK_ADMIN: "admin"
+      KEYCLOAK_ADMIN_PASSWORD: "admin"
+    command: "start-dev"
+    volumes:
+      - featherbank-keycloak-data:/opt/keycloak/data
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   accountsdb:
     image: mysql
     container_name: accountsdb
@@ -304,7 +319,7 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "abdullahkus/featherbank-configserver:s11"
+    image: "abdullahkus/featherbank-configserver:s12"
     container_name: configserver
     ports:
       - "8071:8071"
@@ -322,7 +337,7 @@ services:
       service: microservice-base-config
 
   eurekaserver:
-    image: "abdullahkus/featherbank-eurekaserver:s11"
+    image: "abdullahkus/featherbank-eurekaserver:s12"
     container_name: eurekaserver
     ports:
       - "8070:8070"
@@ -343,7 +358,7 @@ services:
       SPRING_CONFIG_IMPORT: "optional:configserver:http://configserver:8071/"
 
   accounts:
-    image: "abdullahkus/featherbank-accounts:s11"
+    image: "abdullahkus/featherbank-accounts:s12"
     container_name: accounts
     ports:
       - "8080:8080"
@@ -366,7 +381,7 @@ services:
       service: microservice-eureka-config
 
   loans:
-    image: "abdullahkus/featherbank-loans:s11"
+    image: "abdullahkus/featherbank-loans:s12"
     container_name: loans
     ports:
       - "8090:8090"
@@ -389,7 +404,7 @@ services:
       service: microservice-eureka-config
 
   cards:
-    image: "abdullahkus/featherbank-cards:s11"
+    image: "abdullahkus/featherbank-cards:s12"
     container_name: cards
     ports:
       - "9000:9000"
@@ -412,7 +427,7 @@ services:
       service: microservice-eureka-config
 
   gatewayserver:
-    image: "abdullahkus/featherbank-gatewayserver:s11"
+    image: "abdullahkus/featherbank-gatewayserver:s12"
     container_name: gatewayserver
     ports:
       - "8072:8072"
@@ -431,6 +446,7 @@ services:
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
       SPRING_DATA_REDIS_TIMEOUT: 1s
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: "http://keycloak:8080/realms/master/protocol/openid-connect/certs"
     extends:
       file: common-config.yml
       service: microservice-eureka-config
@@ -451,3 +467,5 @@ volumes:
     name: featherbank-zipkindb-data
   featherbank-rabbitmq-data:
     name: featherbank-rabbitmq-data
+  featherbank-keycloak-data:
+    name: featherbank-keycloak-data
